#39 Optimize charset usage in FallbackInstanceIdentifier class.